Update page title and content for Black Tang Fish

--- a/blackTangFishDetail.html
+++ b/blackTangFishDetail.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Blue Tang Fish</title>
+        <title>Black Tang Fish</title>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="style.css">
 
@@ -29,4 +29,41 @@
             Other Names: Black Longnose Tang, Longnose Surgeonfish, or Black Sailfin Tang<br>
         </p>
     </body>
+</html>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Black Tang Fish</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body class="detail">
+    <!-- Page container -->
+    <div class="fish-detail-container">
+
+        <!-- Left side: fish image -->
+        <div class="fish-image-container">
+            <img src="images/blackTangFishBanner.jpg" alt="Black Tang Fish" class="fish-image">
+        </div>
+
+        <!-- Right side: information and 3D model -->
+        <div class="fish-info">
+            <h1>Bicolor Foxface</h1>
+            <p><strong>Scientific Name:</strong> Zebrasoma flavescens</p>
+            <p><strong>Common Name:</strong> Black Tang</p>
+            <p><strong>Other Names:</strong> Black Longnose Tang, Longnose Surgeonfish, or Black Sailfin Tang</p>
+            <p><strong>Behavior:</strong> Diurnal (active during the day)with adults living in loose groups, while juveniles are territorial</p>
+            <p><strong>Habitat:</strong>Central and Western Pacific inshore coral reefs located around Hawaii</p>
+            <p><strong>Diet:</strong> Omnivore; algae and zooplankton</p>
+            <p><strong>Size:</strong> 8 inces, with males being larger than females</p>
+            <p><strong>Lifespan:</strong> 10-30 years</p>
+            <p><strong>Reproduction:</strong> External fertilization and scatter eggs</p>
+            <p><strong>Cool Facts:</strong> The black tang is considered a rarity because it is only collected from a few specific locations, such as Christmas Island in the South Pacific</p>
+            <!-- Optional back button -->
+            <a id="backBtn" href="index.html">&#8592; Back</a>
+        </div>
+
+    </div>
+</body>
 </html>
