Update Black Tang Fish details in HTML
Removed old HTML structure and replaced with updated content for Black Tang Fish.

--- a/blackTangFishDetail.html
+++ b/blackTangFishDetail.html
@@ -1,37 +1,4 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>Black Tang Fish</title>
-        <meta charset="UTF-8">
-        <link rel="stylesheet" href="style.css">
-
-        <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
-        <script src="fishTank.js"></script>
-    </head>
-
-    <body class="detail">
-        <div class="container">
-            <img id="detailBanner" src="images/blackTangFishBanner.jpg">
-                <a href="index.html" id="backBtn"><img src="images/chevronBackSymbol.png"></a>
-                <h1 id="detailTitle">Black Tang Fish</h1>
-                
-                </div>
-        <p class="description">
-            Common Name: Black Tang<br>
-            Scientific Name: Zebrasoma flavescens<br>
-            Adult Size: 8 inces, with males being larger than females<br>
-            Habitat: Central and Western Pacific inshore coral reefs located around Hawaii<br>
-            Behavior: Diurnal (active during the day)with adults living in loose groups, while juveniles are territorial<br>
-            Lifespan: 10-30 years<br>
-            Diet: Omnivore; algae and zooplankton<br>
-            Reproduction: External fertilization and scatter eggs<br>
-            Cool Facts: The black tang is considered a rarity because it is only collected from a few specific locations, such as Christmas Island in the South Pacific<br>
-            Other Names: Black Longnose Tang, Longnose Surgeonfish, or Black Sailfin Tang<br>
-        </p>
-    </body>
-</html>
-
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -49,7 +16,7 @@
 
         <!-- Right side: information and 3D model -->
         <div class="fish-info">
-            <h1>Bicolor Foxface</h1>
+            <h1>Black Tang Fish</h1>
             <p><strong>Scientific Name:</strong> Zebrasoma flavescens</p>
             <p><strong>Common Name:</strong> Black Tang</p>
             <p><strong>Other Names:</strong> Black Longnose Tang, Longnose Surgeonfish, or Black Sailfin Tang</p>
