Revise clown fish detail HTML structure and content
Updated the structure and content of the clown fish detail page.

--- a/clownFishDetail.html
+++ b/clownFishDetail.html
@@ -1,31 +1,38 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>Clown Fish</title>
-        <meta charset="UTF-8">
-        <link rel="stylesheet" href="style.css">
-        <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
-        <script src="fishTank.js"></script>
-    </head>
-    
-    <body class="detail">
-        <div class="container">
-            <img id="detailBanner" src="images/clownFishBanner.jpg">
-                <a href="index.html" id="backBtn"><img src="images/chevronBackSymbol.png"></a>
-                <h1 id="detailTitle">Clown Fish</h1>
-                
-                </div>
-        <p class="description">
-            Common Name: Platinum Clownfish<br>
-            Scientific Name: Amphiprion percula<br>
-            Adult Size: 3 inches<br>
-            Habitat: Indian, Pacific Oceans, Red Sea<br>
-            Behavior: Semi-Agressive<br>
-            Lifespan: 3-6 years<br>
-            Diet: Omnivore<br>
-            Reproduction: External Fertilization and are all born male <br>
-            Cool Facts: Can change physiology<br>
-            Other names: Anemone fish        
-        </p>
-    </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Clown Fish</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body class="detail">
+    <!-- Page container -->
+    <div class="fish-detail-container">
+
+        <!-- Left side: fish image -->
+        <div class="fish-image-container">
+            <img src="images/clownFishBanner.jpg" alt="Clown Fish" class="fish-image">
+        </div>
+
+        <!-- Right side: information and 3D model -->
+        <div class="fish-info">
+            <h1>Clown Fish</h1>
+            <p><strong>Scientific Name:</strong> Amphiprion percula</p>
+            <p><strong>Common Name:</strong> Platinum Clownfish</p>
+            <p><strong>Other Names:</strong> Anemone fish  </p>
+            <p><strong>Behavior:</strong> Semi-Aggresive</p>
+            <p><strong>Habitat:</strong>Indian, Pacific Oceans, Red Sea</p>
+            <p><strong>Diet:</strong> Omnivore</p>
+            <p><strong>Size:</strong> 3 inches</p>
+            <p><strong>Lifespan:</strong> 5 years</p>
+            <p><strong>Reproduction:</strong> External Fertilization and are all born male</p>
+            <p><strong>Cool Facts:</strong> Can change physiology</p>
+            <!-- Optional back button -->
+            <a id="backBtn" href="index.html">&#8592; Back</a>
+
+        </div>
+
+    </div>
+</body>
 </html>
+
