--- a/blueCaribbeanFishDetail.html
+++ b/blueCaribbeanFishDetail.html
@@ -11,7 +11,7 @@
 
         <!-- Left side: fish image -->
         <div class="fish-image-container">
-            <img src="iUntitled design.jpg" alt="Blue Caribbean Tang" class="fish-image">
+            <img src="Untitled design.jpg" alt="Blue Caribbean Tang" class="fish-image">
         </div>
 
         <!-- Right side: information and 3D model -->
