--- a/orchidDottybackFishDetail.html
+++ b/orchidDottybackFishDetail.html
@@ -1,36 +1,3 @@
-<!-- <!DOCTYPE html>
-<html>
-    <head>
-        <title>Orchid Dottyback</title>
-        <meta charset="UTF-8">
-        <link rel="stylesheet" href="style.css">
-
-        <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
-        <script src="fishTank.js"></script>
-    </head>
-    
-    <body class="detail">
-        <div class="container">
-            <img id="detailBanner" src="images/orchidDottybackFishBanner.jpg">
-                <a href="index.html" id="backBtn"><img src="images/chevronBackSymbol.png"></a>
-                <h1 id="detailTitle" class="lowVisibility">Orchid Dottyback Fish</h1>
-                
-                </div>
-        <p class="description">
-            Common Name: Orchid Dottyback<br>
-            Scientific Name: Pseudochromis fridamani<br>
-            Adult Size: 3 inches<br>
-            Habitat: Indian Ocean and Red Sea<br>
-            Behavior: Semi-Agressive<br>
-            Lifespan: 3-5 Years<br>
-            Diet: Carnivore<br>
-            Reproduction: External fertilization with the male guarding the eggs<br>
-            Cool Facts: Females can chnage their sex to male, but not the other way<br>
-            Other names: Fridman's Dottyback   
-        </p>
-    </body>
-</html>-->
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -51,9 +18,15 @@
         <div class="fish-info">
             <h1>Orchid Dottyback</h1>
             <p><strong>Scientific Name:</strong> Pseudochromis fridmani</p>
-            <p><strong>Habitat:</strong> Coral reefs of the Red Sea</p>
+            <p><strong>Common Name:</strong> Orchid Dottyback</p>
+             <p><strong>Other Names:</strong> Fridman’s dottyback or Fridman’s pseudochromis. </p>
+             <p><strong>Behavior:</strong>Aggressive </p>
+            <p><strong>Habitat:</strong> Coral reefs of the Red Sea, Australia, Asia</p>
             <p><strong>Diet:</strong> Carnivorous</p>
             <p><strong>Size:</strong> Up to 3 inches</p>
+            <p><strong>Lifespan:</strong> 5-7 years</p>
+            <p><strong>Reproduction:</strong> Egg-layers that form pairs to reproduce, with the male tending to the demersal eggs laid in a crevice or cave</p>
+            <p><strong>Cool Facts:</strong>This fish camouflages as its prey's parents to trick it into becoming dinner. </p>
 
 
             <!-- Optional back button -->
@@ -63,4 +36,3 @@
     </div>
 </body>
 </html>
-
