--- a/stripedBlennyFishDetail.html
+++ b/stripedBlennyFishDetail.html
@@ -1,32 +1,40 @@
 <!DOCTYPE html>
-<html>
-    <head>
-    <title>Striped Blenny</title>
+<html lang="en">
+<head>
     <meta charset="UTF-8">
+    <title>Striped Blenny</title>
     <link rel="stylesheet" href="style.css">
+</head>
+<body class="detail">
+    <!-- Page container -->
+    <div class="fish-detail-container">
 
-    <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
-    <script src="fishTank.js"></script>
-    </head>
+        <!-- Left side: fish image -->
+        <div class="fish-image-container">
+            <img src="sea-cucumber_8.jpg" alt="Striped Blenny" class="fish-image">
+        </div>
 
-    <body class="detail">
-        <div class="container">
-            <img id="detailBanner" src="/images/blueTangFishBanner.jpg">
-                <a href="index.html" id="backBtn"><img src="images/chevronBackSymbol.png"></a>
-                <h1 id="detailTitle">Clown Fish</h1>
-                
-                </div>
-        <p class="description">
-            Common Name: Striped Blenny<br>
-            Scientific Name: Meiacanthus grammistes<br>
-            Adult Size: 5 inches<br>
-            Habitat: Western Pacific Ocean<br>
-            Behavior: Semi-Agressive<br>
-            Lifespan: 3-5 Years<br>
-            Diet: Omnivore<br>
-            Reproduction: External fertilization<br>
-            Cool Facts: Male will fertilize different females and guard all the eggs in a pile<br>
-            Other names: Grammistes, Striped Fang, Striped Poison-Fang Blenny   
-        </p>
-    </body>
+        <!-- Right side: information and 3D model -->
+        <div class="fish-info">
+            <h1>Striped Blenny</h1>
+            <p><strong>Scientific Name:</strong> Name: Meiacanthus grammistes</p>
+            <p><strong>Common Name:</strong> Striped Blenny</p>
+             <p><strong>Other Names:</strong> Grammistes, Striped Fang, Striped Poison-Fang Blenny </p>
+             <p><strong>Behavior:</strong>Semi-Agressive </p>
+            <p><strong>Habitat:</strong> Western Pacific Ocean</p>
+            <p><strong>Diet:</strong> Omnivore</p>
+            <p><strong>Size:</strong> 5 inches</p>
+            <p><strong>Lifespan:</strong> 3 - 5 years</p>
+            <p><strong>Reproduction:</strong> External fertilization</p>
+            <p><strong>Cool Facts:</strong>Male will fertilize different females and guard all the eggs in a pile</p>
+
+           
+            <!-- Optional back button -->
+            <a id="backBtn" href="index.html">&#8592; Back</a>
+        </div>
+
+    </div>
+</body>
 </html>
+
+
