--- a/stripedBlennyFishDetail.html
+++ b/stripedBlennyFishDetail.html
@@ -11,7 +11,7 @@
 
         <!-- Left side: fish image -->
         <div class="fish-image-container">
-            <img src="sea-cucumber_8.jpg" alt="Striped Blenny" class="fish-image">
+            <img src="stripedblenny.jpg" alt="Striped Blenny" class="fish-image">
         </div>
 
         <!-- Right side: information and 3D model -->
