--- a/yellowTangFishDetail.html
+++ b/yellowTangFishDetail.html
@@ -30,3 +30,42 @@
         </p>
     </body>
 </html>
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Yellow Tang Fish</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body class="detail">
+    <!-- Page container -->
+    <div class="fish-detail-container">
+
+        <!-- Left side: fish image -->
+        <div class="fish-image-container">
+            <img src="images/yellowTangFishBanner.jpg" alt="Yellow Tang Fish" class="fish-image">
+        </div>
+
+        <!-- Right side: information and 3D model -->
+        <div class="fish-info">
+            <h1>Yellow Tang Fish</h1>
+            <p><strong>Scientific Name:</strong> Zebrasoma flavescens</p>
+            <p><strong>Common Name:</strong> Yellow Tang Fish</p>
+             <p><strong>Other Names:</strong> Yellow Sailfin Tang, Somber Surgeonfish, Lemon Sailfin </p>
+             <p><strong>Behavior:</strong>Semi-Agressive </p>
+            <p><strong>Habitat:</strong> Central and Western Pacific inshore coral reefs located around Hawaii</p>
+            <p><strong>Diet:</strong> Omnivore; algae and zooplankton</p>
+            <p><strong>Size:</strong> 8 inces, with males being larger than females</p>
+            <p><strong>Lifespan:</strong> 10-30 years</p>
+            <p><strong>Reproduction:</strong> External fertilization and scatter eggs</p>
+            <p><strong>Cool Facts:</strong>At night they turn grey-yellow with a white lateral line along the side</p>
+           
+            <!-- Optional back button -->
+            <a id="backBtn" href="index.html">&#8592; Back</a>
+        </div>
+
+    </div>
+</body>
+</html>
