--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </a>
             
         <a href="blackLongspinedUrchin.Detail.html">
-        <img class ="icon" class="fish-images" src="6caaeb58-5679-4a68-9304-82b85da01ca0.png" id="blackLong-spinedUrchin">
+        <img class ="icon" class="fish-images" src="6caaeb58-5679-4a68-9304-82b85da01ca0.png" id="blackLongSpinedUrchin">
         </a>
  </div> 
          <script src="swim.js"></script>
