--- a/index.html
+++ b/index.html
@@ -69,6 +69,10 @@
         <a href="blackLongspinedUrchin.Detail.html">
         <img class ="icon" class="fish-images" src="6caaeb58-5679-4a68-9304-82b85da01ca0.png" id="blackLongSpinedUrchin">
         </a>
+
+        <a href="yellowtailDamselFish.html">
+        <img class ="icon" class="fish-images" src="" id="yellowtailDamsel">
+        </a>
  </div> 
          <script src="swim.js"></script>
     </body>
