--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         </a>
 
         <a href="yellowtailDamselFish.html">
-        <img class ="icon" class="fish-images" src="" id="yellowtailDamsel">
+        <img class ="icon" class="fish-images" src="yellowtailDamselFish.png" id="yellowtailDamsel">
         </a>
  </div> 
          <script src="swim.js"></script>
