--- a/yellowtailDamselFish.html
+++ b/yellowtailDamselFish.html
@@ -11,7 +11,7 @@
 
         <!-- Left side: fish image -->
         <div class="fish-image-container">
-            <img src="yellowtailDamselFish.jpg" alt="Yellowtail Damsel" class="fish-image">
+            <img src="yellowtailDamselfbackground.webp" alt="Yellowtail Damsel" class="fish-image">
         </div>
 
         <!-- Right side: information and 3D model -->
