--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </a>
 
         <a href="bicolorFoxface.html">
-        <img class="iicon fish-images"src="images/bicolorFoxfaceFishIcon.png" id="bicolorFoxfaceFish">
+        <img class="icon fish-images"src="images/bicolorFoxfaceFishIcon.png" id="bicolorFoxfaceFish">
         </a>
 
         <a href="coralBeautyFishDetail.html">
