--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div id="aquarium">
        
         <a href="clownFishDetail.html">
-        <img class="icon fish-images"src="images/clownFishIcon.png" id="clownFish" >
+        <img class="icon fish-image"src="images/clownFishIcon.png" id="clownFish" >
         </a>
 
         <a href="blueTangFishDetail.html">
