--- a/index.html
+++ b/index.html
@@ -73,6 +73,10 @@
         <a href="yellowtailDamselFish.html">
         <img class ="icon" src="yellowtailDamselFish.png" id="yellowtailDamsel">
         </a>
+
+        <a href="SantaFish.html">
+        <img class ="icon" src="SantaFish1.png" id="santaFish">
+        </a>
  </div> 
          <script src="swim.js"></script>
     </body>
