--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <img class ="icon" src="yellowtailDamselFish.png" id="yellowtailDamsel">
         </a>
 
-        <a href="SantaFish.html">
+        <a hre="SantaFish.html">
         <img class ="icon" src="SantaFish1.png" id="santaFish">
         </a>
  </div> 
