--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     </head>
 
     <body class="index bubbler-one-regular">
-       
+        <div id="christmasMessage">
+          Ho, Ho, Ho... Merry Christmas!
+        </div>
         <h1 class="mainTitle">The SJC Aquarium</h1>
         <h2 class="subTitle"> Please click on an image to learn more about that aquatic creature. </h2>
 
