--- a/seaCucumberDetail.html
+++ b/seaCucumberDetail.html
@@ -16,9 +16,9 @@
 
         <!-- Right side: information and 3D model -->
         <div class="fish-info">
-            <h1>Sea Cucumberk</h1>
+            <h1>Sea Cucumber</h1>
             <p><strong>Scientific Name:</strong> Holothuroidea</p>
-            <p><strong>Common Name:</strong> Orchid Dottyback</p>
+            <p><strong>Common Name:</strong> Sea Cucumber</p>
              <p><strong>Other Names:</strong> Sea pickles or sea slugs</p>
              <p><strong>Behavior:</strong>Feeds by sifting sediment of filtering passing food and nocturnal foraging </p>
             <p><strong>Habitat:</strong> Found worldwide in sand, mud, rocks, and coral</p>
